fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -22,16 +22,21 @@ a:hover {
   color: #535bf2;
 }
 
+div{
+  /* padding: 0 1.5em; */
+}
+
 body {
   margin: 0;
-  display: flex;
+  padding: 0;
+  /* display: flex; */
   text-align: left;
-  min-width: 320px;
+  /* min-width: 320px; */
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
 
